# LLM-From-Scratch

./: .gitignore  README.md  pyproject.toml
Agentic/poker_solverllm/: .env.template  README.md  agent_build.ipynb  app.py  prompt.txt  requirements.txt
Agentic/poker_solverllm/src/agent/: __init__.py  agent.py  state.py
Agentic/poker_solverllm/src/constants/: __init__.py  config.py
Agentic/poker_solverllm/src/tests/: test_agent.py  test_poker_tools.py
Agentic/poker_solverllm/src/tools/: __init__.py  poker_tools.py
Agentic/poker_solverllm/src/ui/: __init__.py  streamlit_app.py
Agentic/poker_solverllm/src/utils/: __init__.py  image_utils.py
LLM_from_Scratch/: PyTorch_LLM_from_Scratch.ipynb
LinearRegression/: lr.ipynb
finetuning-LLM/: unsloth_Qwen2_5_(7B)_Alpaca.ipynb
transformer/: 1_build_tokenizer.ipynb  1to4_torch_implementation.ipynb  2_build_embedding.ipynb  3_positional_encoding.ipynb  4_selfattention.ipynb  5_feedforward.ipynb  5_torch_implementation.ipynb
transformer/utils/: embedding.py  embedding_pc.py  tokenizer.py
