[project]
name = "small-llm-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.5.0",
    "grandalf>=0.8",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.50",
    "langchain-openai>=0.3.12",
    "langchain-xai>=0.2.2",
    "langgraph>=0.3.24",
    "langgraph-prebuilt>=0.1.7",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "pillow>=11.1.0",
    "pip>=25.0.1",
    "pokerkit>=0.6.3",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "tavily-python>=0.5.4",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
]
